--- a/src/app/pages/main/home/delivery/buy.component.html
+++ b/src/app/pages/main/home/delivery/buy.component.html
@@ -57,7 +57,7 @@
                     </ion-label>
                 </ion-list-header>
                 <ion-item [formGroupName]="i" *ngFor="let option of product.yesOrNoOptions; let i=index">
-                    <ion-checkbox slot="start" [formControlName]="option.name" [checked]="option.selected"></ion-checkbox>
+                    <ion-checkbox slot="start" formControlName="selected" [checked]="option.selected"></ion-checkbox>
                     <ion-label>{{option.name}}</ion-label>
                     <ion-label class="subtitle">{{option.description}}</ion-label>
                 </ion-item>
