--- a/src/app/pages/main/home/delivery/list.component.html
+++ b/src/app/pages/main/home/delivery/list.component.html
@@ -1,7 +1,10 @@
 <ion-header>
 	<ion-toolbar>
 		<ion-title>
-			Restaurantes
+      <div class="header">
+      <img class="logo" mat-card-sm-image src="/assets/images/logo.jpeg">
+      <span>Encontre seu restaurante favorito!</span>
+      </div>
 		</ion-title>
 	</ion-toolbar>
 </ion-header>
